--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "private": true,
   "dependencies": {
     "@abstractplay/gameslib": "latest",
-    "@abstractplay/renderer": "latest",
+    "@abstractplay/renderer": "file:../renderer/abstractplay-renderer-1.0.0b-beta.tgz",
     "@atlaskit/pragmatic-drag-and-drop": "^1.3.0",
     "@tanstack/react-table": "^8.11.2",
     "@testing-library/jest-dom": "5.16.5",
