--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-table": "^8.11.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/user-event": "13.5.0",
+    "array-move": "^3.0.1",
     "aws-amplify": "5.3.12",
     "buffer": "6.0.3",
     "i18next": "^21.10.0",
