--- a/serverless.yml
+++ b/serverless.yml
@@ -51,7 +51,7 @@ custom:
 
     objectHeaders:
       # Cache-bustable assets (fingerprinted)
-      "static/*":
+      "static/**/*":
         - name: Cache-Control
           value: "public, max-age=31536000, immutable"
 
