--- a/serverless.yml
+++ b/serverless.yml
@@ -55,6 +55,10 @@ custom:
         - name: Cache-Control
           value: "public, max-age=31536000, immutable"
 
+      "flags/**/*":
+        - name: Cache-Control
+          value: "public, max-age=31536000, immutable"
+
       # HTML should never be cached
       "index.html":
         - name: Cache-Control
