--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "rehype-raw": "6.1.1",
     "remark-gfm": "^3.0.1",
     "tiny-invariant": "^1.3.3",
-    "web-vitals": "2.1.4"
+    "web-vitals": "2.1.4",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
